<resources>
    <string name="app_name">AppVacInfo</string>
    <string name="open">open</string>
    <string name="close">Close</string>
    <string-array name="faixa_etaria_criancas">
        <item>Ao nascer</item>
        <item>Até 2 meses</item>
        <item>Até 3 meses</item>
        <item>Até 6 meses</item>
        <item>Até 9 meses</item>
        <item>Até 12 meses</item>
        <item>Até 15 meses</item>
        <item>Até 4 anos</item>
        <item>Até 5 anos</item>
        <item>Até 9 anos</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sobre">Sobre o VacInfo</string>
    <string name="sobre_projeto"> Projeto desenvolvido para disciplina de Linguagem de Programação III sob orientação do Prof. Vinicius Santos Andrade para a ONG Irmã Adelaide com o objetivo de informar a população acerca da importância da vacinação sob orientação do Prof. Vinicius Santos Andrade para a ONG Irmã Adelaide com o objetivo de informar a população acerca da importância da vacinação </string>
    <string name="desenvolvido_por"> Desenvolvido por:</string>
    <string name="sobre_alunos"><![CDATA[
        Alexia Cassiane de Siqueira Lima, \n
        Carla Kremer de Oliveira, \n
        Guilherme Henrique Custodio e \n
        Natan Duarte Procópio. \n
        ]]>    </string>
    <string name="what_are_vaccines"><![CDATA[\t\tVacinar, é criar artificialmente e sem riscos, um estado de proteção contra determinadas doenças infecto-contagiosas e graves. \n\n As vacinas são substâncias biológicas, preparadas a partir dos microrganismos causadores das doenças (bactérias ou vírus), modificados laboratorialmente, de forma a perderem a sua potência de provocar doença.]]> </string>
    <string name="why_to_vaccinate"><![CDATA[\t\tA imunização é imprescindível para a saúde pública, pois previne a disseminação de enfermidades graves, que causam epidemias e levam a sérias complicações.\n\n\t\tÉ uma medida que contribui para fortalecer a resposta imune individual e coletiva, impedindo o surto de doenças.]]></string>
    <string name="reasons_to_vaccinate"><![CDATA[\t\tVacinar reforça o sistema imunológico, evita epidemias, salva vidas e reduz a taxa de mortalidade]]></string>
    <string name="quando_vacinar">Quando Vacinar</string>
    <string name="onde_vacinar">Onde Vacinar</string>
</resources>