<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".controller.sobreController.SobreActivity"
    android:background="@drawable/grad_home"
    android:fillViewport="true"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >

        <ImageView
            android:id="@+id/logoVacInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_vacinfo_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/sobre_descricao"
            app:layout_constraintTop_toBottomOf="@+id/logoVacInfo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sobre_projeto"
            android:textSize="16dp"
            android:textColor="#FAFAFA"
            android:padding="15dp"
            android:justificationMode="inter_word"
            />
        <TextView
            android:id="@+id/desenvolvido_por"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/desenvolvido_por"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/sobre_descricao"
            app:layout_constraintTop_toBottomOf="@+id/sobre_descricao"
            android:textColor="#FAFAFA"
            android:justificationMode="inter_word"
            />
        <TextView
            android:id="@+id/sobre_alunos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sobre_alunos"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/desenvolvido_por"
            app:layout_constraintTop_toBottomOf="@+id/desenvolvido_por"
            android:textColor="#FAFAFA"
            android:justificationMode="inter_word"
            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/unisagrado_logo"
            tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>